@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-07T16:25:32Z",
-  "count_outdated" : 373,
-  "uniques_outdated" : 215,
-  "count" : 405,
+  "timestamp" : "2022-07-08T01:27:28Z",
+  "count_outdated" : 375,
+  "uniques_outdated" : 216,
+  "count" : 406,
   "uniques" : 233,
   "clones" : [
-    {
-      "timestamp": "2022-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-24T00:00:00Z",
       "count": 2,
